--- a/.gitattributes
+++ b/.gitattributes
@@ -6,5 +6,5 @@
 /.gitignore         export-ignore
 /.travis.yml        export-ignore
 /phpunit.xml.dist   export-ignore
-/tests              export-ignore
+/Tests              export-ignore
 /.editorconfig      export-ignore
